--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -94,17 +94,6 @@ h1 {
 }
 //----
 
-.logo {
-  max-width: 260px;
-}
-
-.réseaux-sociaux {
-  display: flex;
-  flex-wrap: nowrap;
-  margin-right: 36px;
-  max-width: 66px;
-}
-
 .arriere-plan {
   background-image: url("../img/payasage vide tintin.jpg");
   min-height: 887px;
@@ -127,20 +116,12 @@ h1 {
   background-color: #ffd300; /* Couleur au survol (optionnel) */
 }
 
-.lois {
-  display: flex;
-  justify-content: flex-end;
-}
-
-footer {
-  text-align: center;
-}
-
 // --------
 
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f4; /* Couleur de fond */
+  padding: 20px;
   overflow-x: hidden; /* Masque le débordement horizontal */
 }
 
@@ -200,13 +181,6 @@ body {
 
 // -------------
 
-hr {
-  width: 100%; /* Prendre toute la largeur du conteneur */
-  height: 5px; /* Hauteur de la ligne */
-  background-color: rgb(255, 28, 28); /* Couleur de la ligne */
-  margin: 20px 0; /* Espacement au-dessus et en dessous de la ligne */
-}
-
 ___________________________________ .carousel-item {
   display: flex;
   justify-content: center;
@@ -222,3 +196,120 @@ video {
   height: auto; /* Garde le ratio d'aspect */
   display: block; /* Évite les espaces en bas */
 }
+
+//--- Bouton scroll ---------------------------- - -
+// ? fonctione pas
+//------------------------------- - -
+
+//-- FOOTER ----------------------------- - -
+
+footer {
+  text-align: center;
+  background-color: #1c1c1c;
+  color: #fff;
+  padding-top: 62px;
+  padding-bottom: 22px;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+
+.logo {
+  max-width: 260px;
+  margin-bottom: 46px;
+}
+
+.réseaux-sociaux {
+  display: flex;
+  flex-wrap: nowrap;
+  margin-right: 36px;
+  max-width: 66px;
+  margin-bottom: 70px;
+}
+
+.bouton {
+  background-color: #ffd300; /* Couleur de fond jaune */
+  color: black; /* Couleur du texte noir */
+  border: 1px solid black; /* Bord noir de 1px */
+  padding: 12px 50px; /* Espacement intérieur */
+  text-align: center; /* Centrer le texte */
+  text-decoration: none; /* Pas de soulignement */
+  display: inline-block; /* Pour le rendre cliquable */
+  cursor: pointer; /* Changer le curseur au survol */
+  transition: transform 0.3s; /* Transition pour l'agrandissement */
+}
+
+.bouton:hover {
+  transform: scale(1.1); /* Agrandir le bouton au survol */
+  background-color: #ffd300; /* Couleur au survol (optionnel) */
+}
+
+hr {
+  width: 100%; /* Prendre toute la largeur du conteneur */
+  height: 1px; /* Hauteur de la ligne */
+  background-color: #fff; /* Couleur de la ligne */
+  margin-bottom: 20px;
+}
+
+.lois {
+  display: flex;
+  justify-content: flex-end;
+}
+//-- NEWSLETTER ----------------------------- - -
+
+.formulaire-container {
+  padding: 20px; /* Ajout de padding pour le conteneur */
+}
+
+input[type="email"] {
+  padding: 12px;
+  width: 250px;
+  border: 1px solid black; /* Bordure noire de 1px */
+  margin-right: 0; /* Pas de marge entre le champ et le bouton */
+  height: 66px; /* Hauteur du champ de texte */
+}
+
+//------------------------------- - -
+
+//-- barre de progression ----------------------------- - -
+.child {
+  width: 100%;
+  height: 500px;
+}
+
+.child:first-child {
+  background: red;
+}
+
+.child:nth-child(2) {
+  background: green;
+}
+
+.child:nth-child(3) {
+  background: black;
+}
+
+.child:nth-child(4) {
+  background: purple;
+}
+
+.child:last-child {
+  background: blue;
+}
+
+.bg-progress {
+  width: 100%;
+  position: fixed;
+  height: 5px;
+  top: 0;
+}
+
+.progressBar {
+  width: 0;
+  height: 100%;
+  background: yellow;
+}
+
+.footer {
+  height: 800px;
+}
+//------------------------------- - -
