7eme partie teste d'animation manquante

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,3 +3,9 @@
 @import "layout";
 @import "modules/example";
 @import "bootstrap/scss/bootstrap-grid";
+@import "modules/bouton";
+@import "modules/video";
+@import "modules/carrousel";
+@import "modules/barre-progres";
+@import "modules/vente";
+@import "modules/bootstrap";
