--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,37 +1,9 @@
+//-- PROGRAMME DE BASE - NE PAS TOUCHER ! ------------------------------------------------------
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  // ----
-  // Futura PT Book
-  font-family: "futura-pt", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  // Futura PT Book Oblique
-  font-family: "futura-pt", sans-serif;
-  font-weight: 400;
-  font-style: italic;
-  // Futura PT Heavy
-  font-family: "futura-pt", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  // Futura PT Heavy Oblique
-  font-family: "futura-pt", sans-serif;
-  font-weight: 700;
-  font-style: italic;
-  // Futura PT Bold
-  font-family: "futura-pt-bold", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  // Futura PT Bold Oblique
-  font-family: "futura-pt-bold", sans-serif;
-  font-weight: 700;
-  font-style: italic;
-  // ------
-  // Pedestria MVB Bold
-  font-family: "pedestria-mvb", sans-serif;
-  font-weight: 700;
-  font-style: normal;
 }
 
 a {
@@ -43,184 +15,18 @@ video {
   display: block;
 }
 
-// ----------- colone de couleur : bootstrap------------------------------------------------
+//----------------------------------------------------------------------------------
 
-// .row + .row {
-//   margin-top: 16px;
-// }
-
-// .row > .col,
-// .row > [class^="col-"] {
-//   padding-top: 12px;
-//   padding-bottom: 12px;
-//   background-color: rgba(86, 61, 124, 0.15);
-//   border: 1px solid rgba(86, 61, 124, 0.2);
-// }
-
-// ---------------------------------------------------------------------------------------
+// -- TEXTE-TITRE -------------------------------------------------------------------------------------
 
 h1 {
   font-family: "pedestria-mvb", sans-serif;
   font-weight: 700;
   font-style: normal;
 }
+//----------------------------------------------------------------------------------
 
-// ---------------------------------------------------------------------------------------
-
-.container {
-  max-width: 100% !important;
-  padding: 0 !important;
-  margin: 0 !important;
-}
-
-// ---------------------------------------------------------------------------------------
-
-.livres {
-  max-width: 460px;
-}
-
-.photos {
-  display: flex;
-  justify-content: space-evenly;
-  padding-right: 200px;
-  padding-left: 200px;
-}
-
-.presentation {
-  border: 1px solid black; /* Bordure noire de 1px */
-  max-width: 68px;
-}
-
-//----
-.livre-de-vente {
-  max-width: 658px;
-}
-
-.section-achat {
-  margin-top: 62px;
-  margin-bottom: 324px;
-}
-
-.images-BD {
-  width: 425px;
-  display: flex;
-}
-
-.toute-les-images-BD {
-  display: flex;
-}
-//----
-
-.arriere-plan {
-  background-image: url("../img/payasage vide tintin.jpg");
-  min-height: 887px;
-}
-
-.bouton {
-  background-color: #ffd300; /* Couleur de fond jaune */
-  color: black; /* Couleur du texte noir */
-  border: 1px solid black; /* Bord noir de 1px */
-  padding: 12px 50px; /* Espacement intérieur */
-  text-align: center; /* Centrer le texte */
-  text-decoration: none; /* Pas de soulignement */
-  display: inline-block; /* Pour le rendre cliquable */
-  cursor: pointer; /* Changer le curseur au survol */
-  transition: transform 0.3s; /* Transition pour l'agrandissement */
-}
-
-.bouton:hover {
-  transform: scale(1.1); /* Agrandir le bouton au survol */
-  background-color: #ffd300; /* Couleur au survol (optionnel) */
-}
-
-// --------
-
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4; /* Couleur de fond */
-  // padding: 20px;
-  // overflow-x: hidden; /* Masque le débordement horizontal */
-}
-
-.boc {
-  display: flex; /* Utiliser flexbox pour aligner les boîtes côte à côte */
-  flex-wrap: nowrap;
-  justify-content: space-between; /* Espacement entre les boîtes */
-}
-
-.commentaire {
-  background-color: #ffd300; /* Couleur de fond de la boîte de commentaire */
-  border: 1px solid #0d0d0d; /* Bord de la boîte */
-  width: 330px; /* Largeur fixe */
-  height: 188px; /* Hauteur fixe */
-  padding: 20px; /* Espacement intérieur augmenté */
-  margin-bottom: 20px; /* Espacement entre les boîtes */
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Ombre */
-  overflow: hidden; /* Éviter le débordement du texte */
-}
-
-.header {
-  display: flex; /* Utiliser flexbox pour aligner les éléments */
-  justify-content: space-between; /* Espacement entre les éléments */
-  align-items: center; /* Centrer verticalement */
-}
-
-.etoiles {
-  font-size: 20px; /* Taille de la notation par étoiles */
-}
-
-.profil {
-  display: flex; /* Utiliser flexbox pour aligner l'icône et le nom */
-  align-items: center; /* Centrer verticalement */
-}
-
-.icon {
-  width: 30px; /* Largeur de l'icône de profil */
-  height: 30px; /* Hauteur de l'icône de profil */
-  border-radius: 50%; /* Arrondir l'icône */
-  margin-right: 10px; /* Espacement entre l'icône et le nom */
-}
-
-.nom {
-  font-weight: bold; /* Mettre le nom en gras */
-}
-
-.texte {
-  margin-top: 10px; /* Espacement entre l'en-tête et le texte */
-  font-size: 14px; /* Taille du texte */
-  line-height: 1.4; /* Hauteur de ligne pour le texte */
-  overflow: hidden; /* Éviter le débordement du texte */
-  text-overflow: ellipsis; /* Ajouter des points de suspension si le texte déborde */
-  display: -webkit-box; /* Pour le support de l'ellipsis */
-  -webkit-box-orient: vertical; /* Orientation verticale */
-  -webkit-line-clamp: 4; /* Limiter à 4 lignes */
-}
-
-// -------------
-
-___________________________________ .carousel-item {
-  display: flex;
-  justify-content: center;
-}
-
-.carousel-inner .col {
-  padding: 0 5px;
-}
-
-//------------------------------- - -
-video {
-  width: 100%; /* Prend toute la largeur de l'écran */
-  height: auto; /* Garde le ratio d'aspect */
-  display: block; /* Évite les espaces en bas */
-  margin-top: 176;
-  margin-bottom: 263px;
-}
-
-//--- Bouton scroll ---------------------------- - -
-// ? fonctione pas
-//------------------------------- - -
-
-//-- FOOTER ----------------------------- - -
+//-- FOOTER -------------------------------------------------------------------------------------
 
 footer {
   text-align: center;
@@ -257,21 +63,13 @@ footer .logo {
   margin-bottom: 70px;
 }
 
-.bouton {
-  background-color: #ffd300; /* Couleur de fond jaune */
-  color: black; /* Couleur du texte noir */
-  border: 1px solid black; /* Bord noir de 1px */
-  padding: 12px 50px; /* Espacement intérieur */
-  text-align: center; /* Centrer le texte */
-  text-decoration: none; /* Pas de soulignement */
-  display: inline-block; /* Pour le rendre cliquable */
-  cursor: pointer; /* Changer le curseur au survol */
-  transition: transform 0.3s; /* Transition pour l'agrandissement */
+li a {
+  color: #fff;
 }
 
-.bouton:hover {
-  transform: scale(1.1); /* Agrandir le bouton au survol */
-  background-color: #ffd300; /* Couleur au survol (optionnel) */
+.lien-propos {
+  text-align: left;
+  margin-left: 120px;
 }
 
 hr {
@@ -284,214 +82,39 @@ hr {
 .lois {
   display: flex;
   justify-content: flex-end;
+  text-decoration: none;
+  color: #fff;
 }
-//-- NEWSLETTER ----------------------------- - -
 
-.formulaire-container {
-  padding: 20px; /* Ajout de padding pour le conteneur */
+.box-lois {
   display: flex;
-  justify-content: center;
+  justify-content: end;
 }
 
-input[type="email"] {
-  padding: 12px;
-  width: 250px;
-  border: 1px solid black; /* Bordure noire de 1px */
-  margin-right: 0; /* Pas de marge entre le champ et le bouton */
-  height: 66px; /* Hauteur du champ de texte */
-}
+//----------------------------------------------------------------------------------
 
-.bouton-newsletter {
-  background-color: #ffd300; /* Couleur de fond jaune */
-  color: black; /* Couleur du texte noir */
-  border: 1px solid black; /* Bord noir de 1px */
-  padding: 12px 50px; /* Espacement intérieur */
-  text-decoration: none; /* Pas de soulignement */
-  cursor: pointer; /* Changer le curseur au survol */
-  transition: transform 0.3s; /* Transition pour l'agrandissement */
-  display: flex;
-  align-items: center;
-}
-
-.bouton-newsletter:hover {
-  transform: scale(1.1); /* Agrandir le bouton au survol */
-  background-color: #ffd300; /* Couleur au survol (optionnel) */
-}
-
-//------------------------------- - -
-
-//-- barre de progression ----------------------------- - -
-#progress-container {
-  position: fixed;
-  top: 26px;
-  left: 20px;
-  right: 20px;
-  height: 10px; /* Augmentez la hauteur pour la bordure */
-  background-color: #211f1f; /* Couleur de fond de la bordure */
-  z-index: 1000;
-  border-radius: 5px; /* Arrondi des angles de la bordure */
-  padding: 2px; /* Ajoute de l'espace autour de la barre jaune */
-}
-
-#progress-bar {
-  height: 100%;
-  background-color: rgb(230, 192, 0);
-  transition: width 0.1s ease;
-  border-radius: 5px; /* Arrondi des angles de la barre jaune */
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); /* Optionnel : ajoute une ombre pour le style */
-}
-
-#progress-icon {
-  position: absolute;
-  top: -15px; /* Ajustez selon vos besoins pour que la fusée soit bien visible */
-  height: 40px; /* Agrandir la taille de la fusée (20px x 2) */
-  transition: left 0.1s ease; /* Animation de mouvement */
-}
-//------------------------------- - -
-
-//-- alignement ----------------------------- - -
-.centrale {
-  display: flex;
-  justify-content: center;
-}
-
-.droite {
-  display: flex;
-  justify-content: right;
-  margin-right: 50px;
-}
-
-.gauche {
-  display: flex;
-  justify-content: left;
-}
-//------------------------------- - -
-
-//-- Main ----------------------------- - -
+//-- MAIN ALIGNEMENT ------------------------------------------------------
 
 main {
   margin: 50px;
 }
-//-- bouton scroll vers le haut ----------------------------- - -
 
-.blok:nth-of-type(odd) {
-  background-color: rgb(210, 16, 16);
-}
+//----------------------------------------------------------------------------------
 
-.blok:nth-of-type(even) {
-  background-color: black;
-}
+// <!-- forme tranversante diagonal ---------------- -->
 
-@-webkit-keyframes border-transform {
-  0%,
-  100% {
-    border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%;
-  }
-  14% {
-    border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%;
-  }
-  28% {
-    border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%;
-  }
-  42% {
-    border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%;
-  }
-  56% {
-    border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%;
-  }
-  70% {
-    border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%;
-  }
-  84% {
-    border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%;
-  }
-}
-.paginacontainer {
-  height: 185px;
+body {
+  margin: 0;
+  height: 300vh; /* Pour avoir de l'espace pour scroller */
+  background-color: #f4f4f4;
 }
 
-/* #Progress
-================================================== */
+.square {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  background-color: #3498db;
+  transform: translate(-100px, -100px); /* Hors de l'écran */
+}
 
-.progress-wrap {
-  position: absolute;
-  right: 30px;
-  bottom: 30px;
-  height: 46px;
-  width: 46px;
-  cursor: pointer;
-  display: block;
-  border-radius: 50px;
-  box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.1);
-  z-index: 10000;
-  opacity: 0;
-  visibility: hidden;
-  transform: translateY(15px);
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-  background: #ffd300;
-}
-.progress-wrap.active-progress {
-  opacity: 1;
-  visibility: visible;
-  transform: translateY(0);
-}
-.progress-wrap::after {
-  position: absolute;
-  font-family: "unicons";
-  content: "\e84b";
-  text-align: center;
-  line-height: 46px;
-  font-size: 24px;
-  color: #0d0d0d; /* --- Pijl kleur --- */
-  left: 0;
-  top: 0;
-  height: 46px;
-  width: 46px;
-  cursor: pointer;
-  display: block;
-  z-index: 1;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-.progress-wrap:hover::after {
-  opacity: 0;
-}
-.progress-wrap::before {
-  position: absolute;
-  font-family: "unicons";
-  content: "\e84b";
-  text-align: center;
-  line-height: 46px;
-  font-size: 24px;
-  opacity: 0;
-  background: #0d0d0d; /* --- Pijl hover kleur --- */
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  left: 0;
-  top: 0;
-  height: 46px;
-  width: 46px;
-  cursor: pointer;
-  display: block;
-  z-index: 2;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-.progress-wrap:hover::before {
-  opacity: 1;
-}
-.progress-wrap svg path {
-  fill: none;
-}
-.progress-wrap svg.progress-circle path {
-  stroke: #0d0d0d; /* --- Lijn progres kleur --- */
-  stroke-width: 4;
-  box-sizing: border-box;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
-//------------------------------- - -
-
-//------------------------------- - -
-//------------------------------- - -
+//----------------------------------------------------------------------------------
