--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -101,20 +101,51 @@ main {
 
 //----------------------------------------------------------------------------------
 
-// <!-- forme tranversante diagonal ---------------- -->
+//-- livre edition -------------------------------------------------------------------------------
 
-body {
-  margin: 0;
-  height: 300vh; /* Pour avoir de l'espace pour scroller */
-  background-color: #f4f4f4;
-}
+// body {
+//   margin: 0;
+//   background-color: black;
+//   overflow: hidden;
+// }
 
-.square {
-  position: fixed;
-  width: 50px;
-  height: 50px;
-  background-color: #3498db;
-  transform: translate(-100px, -100px); /* Hors de l'écran */
-}
+// .custom-carousel {
+//   position: relative;
+//   width: 100vw;
+//   height: 100vh;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
 
-//----------------------------------------------------------------------------------
+// .custom-carousel img {
+//   max-width: 100%;
+//   max-height: 100%;
+//   display: none;
+//   position: absolute;
+// }
+
+// .custom-carousel img.custom-active {
+//   display: block;
+// }
+
+// .custom-button-container {
+//   position: absolute;
+//   bottom: 20px;
+//   text-align: center;
+//   width: 100%;
+// }
+
+// .custom-button-container button {
+//   padding: 10px 20px;
+//   font-size: 16px;
+//   background-color: white;
+//   border: none;
+//   border-radius: 5px;
+//   cursor: pointer;
+//   transition: background-color 0.3s;
+// }
+
+// .custom-button-container button:hover {
+//   background-color: gray;
+// }
